--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,10 @@ dist
 build
 .strapi-updater.json
 .strapi-cloud.json
+
+############################
+# Package Managers
+############################
+
+yarn.lock
+package-lock.json
