--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "@strapi/plugin-i18n": "4.25.0",
     "@strapi/plugin-users-permissions": "4.25.0",
     "@strapi/strapi": "4.25.0",
+    "ethers": "^6.13.1",
+    "joi": "^17.13.1",
     "mysql": "2.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "siwe": "^2.3.2",
     "styled-components": "5.3.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/uuid": "^9.0.8"
+  },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
